# poke-RAG

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TESTING.md  cspell.json  pyproject.toml
.claude/: rules.md
.github/workflows/: build.yaml  ci.yaml  lint.yaml  security.yaml
data/dpo/: eval_questions.txt  questions.txt
data/sft/: train.jsonl
docs/: CODE_REVIEW_FINDINGS.md  ENHANCEMENT_ROADMAP.md  RETRIEVAL_ENHANCEMENT.md  SFT_IMPLEMENTATION.md
docs/CODEMAPS/: generation.md  pipeline_api_scripts.md  retrieval.md
processed/bulbapedia/: ability.txt  ability_aug.txt  item.txt  item_aug.txt  move.txt  move_aug.txt
processed/pokeapi/: ability.txt  ability_aug.txt  item.txt  item_aug.txt  move.txt  move_aug.txt  pokemon_encounters.txt  pokemon_moves.txt  pokemon_species.txt  pokemon_species_aug.txt
processed/smogon/: formats.txt  formats_aug.txt  pokemon.txt  pokemon_aug.txt
scripts/: build_index.py  collect_pokemon_encounters.py  collect_pokemon_moves.py  preview_smogon_chunks.py
scripts/eval/: questions.yaml  run_eval.py
scripts/retrieval/: bulbapedia_topic_extractor.py
scripts/training/: RUNPOD_SETUP_NOTES.md  clean_sft_data.py  eval_dpo.py  gemini_client.py  generate_dpo_data.py  generate_sft_data.py  inference_runner.py  judge_protocol.py  pokesage_system.py  runpod_setup.sh  sampler.py  schemas.py  train_dpo.py  train_sft.py
src/: __init__.py  config.py  types.py
src/api/: app.py  dependencies.py  models.py  query_parser.py
src/generation/: __init__.py  exceptions.py  generator.py  inference.py  loader.py  models.py  prompt_builder.py  protocols.py
src/pipeline/: __init__.py  rag_pipeline.py  types.py
src/retrieval/: __init__.py  _compat.py  cache.py  chunker.py  constants.py  context_assembler.py  embedder.py  knowledge_refiner.py  protocols.py  query_router.py  query_transformer.py  reranker.py  retriever.py  types.py  vector_store.py
src/utils/: __init__.py  logging.py  math.py
tests/: conftest.py
tests/e2e/: test_pokemon_queries.py
tests/fixtures/: sample_bulbapedia.txt  sample_pokeapi.txt  sample_smogon.txt
tests/integration/: test_api.py  test_api_lifespan.py  test_api_streaming.py  test_build_index.py  test_embedder.py  test_generate_dpo_data.py  test_generate_sft_data.py  test_generation_pipeline.py  test_qdrant_store.py  test_rag_pipeline.py  test_rag_pipeline_refiner.py
tests/unit/: test_api.py  test_async_pipeline.py  test_async_protocols.py  test_async_retriever.py  test_async_vector_store.py  test_build_index.py  test_bulbapedia_metadata_extractor.py  test_cache.py  test_cache_key.py  test_chunker.py  test_chunker_metadata.py  test_clean_sft_data.py  test_compat.py  test_config.py  test_context_assembler.py  test_dependencies.py  test_embedder.py  test_eval_metrics.py  test_gemini_client.py  test_generate_sft_data.py  test_generator.py  test_generator_streaming.py  test_inference.py  test_inference_runner.py  test_inference_streaming.py  test_judge_protocol.py  test_knowledge_refiner.py  test_loader.py  test_logging_setup.py  test_models.py  test_pipeline.py  test_pipeline_cache.py  test_pokeapi_metadata_extractor.py  test_prompt_builder.py  test_query_parser.py  test_query_router.py  test_query_transformer.py  test_rag_pipeline_streaming.py  test_reranker.py  test_retriever.py  (+5 more)
